cleanup email register code + fix lack of email for new users
Main fault was overridden User->insert method which did not return the
user object

--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,7 @@
   <div class="container register-container">
     <div class="center-block">
       <h1 class="text-center subscribe">Register now!</h1>
-      <form class="text-center form-inline" method="post" action="/register">
+      <form class="text-center form-inline" method="post" action="/register" name="register-email">
         <div class="form-group">
           <input class="form-control" type="email" name="username" size="30" required placeholder="Please enter your email address">
           <input class="btn btn-primary" type="submit" value="Register">
