--- a/views/profile/edit.html
+++ b/views/profile/edit.html
@@ -47,9 +47,16 @@
         </div>
 
         <div class="form-group">
+          <label for="inputState" class="col-sm-2 control-label">State</label>
+          <div class="col-sm-10">
+            <select name="state" class="state form-control" id="inputState" name="states_id"></select>
+          </div>
+        </div>
+
+        <div class="form-group">
           <label for="inputCountry" class="col-sm-2 control-label">Country</label>
           <div class="col-sm-10">
-            <select name="country" class="country form-control" id="inputCountry" name="country_iso_code">
+            <select name="country" class="country form-control" id="inputCountry" name="country_iso_code"></select>
           </div>
         </div>
 
