--- a/views/admin/users/create_update.html
+++ b/views/admin/users/create_update.html
@@ -13,6 +13,7 @@
       <div class="col-sm-10">
         <input type="text" class="form-control" id="inputEmail" name="email" required placeholder="Email">
         <div class="help-block first_name_error"></div>
+        <div class="help-block">This is also the username</div>
       </div>
     </div> 
 
@@ -40,6 +41,59 @@
             <div class="help-block nickname_error"></div>
           </div>
         </div>
+
+        <div class="form-group company_input">
+          <label for="inputCompany" class="col-sm-2 control-label">Company</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputCompany" name="company" placeholder="Company">
+            <div class="help-block company_error"></div>
+          </div>
+        </div>
+
+        <div class="form-group city_input">
+          <label for="inputCity" class="col-sm-2 control-label">City</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputCity" name="city" placeholder="City">
+            <div class="help-block city_error"></div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="inputState" class="col-sm-2 control-label">State</label>
+          <div class="col-sm-10">
+            <select name="state" class="state form-control" id="inputState" name="states_id"></select>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="inputCountry" class="col-sm-2 control-label">Country</label>
+          <div class="col-sm-10">
+            <select name="country" class="country form-control" id="inputCountry" name="country_iso_code"></select>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button id="geocode" class="btn btn-primary">Geocode City/Country</button>
+          </div>
+        </div>
+
+        <div class="form-group latitude">
+          <label for="inputLatitude" class="col-sm-2 control-label">Latitude</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputLatitude" name="latitude" placeholder="Latitude">
+            <div class="help-block latitude"></div>
+          </div>
+        </div>
+
+        <div class="form-group longitude_input">
+          <label for="inputLongitude" class="col-sm-2 control-label">Longitude</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputLongitude" name="longitude" placeholder="Longitude">
+            <div class="help-block longitude_error"></div>
+          </div>
+        </div>
+
         <div class="form-group monger_groups_input">
           <label for="inputMongerGroups" class="col-sm-2 control-label">Monger Groups</label>
           <div class="col-sm-10">
@@ -60,7 +114,7 @@
         <div class="form-group bio_input">
           <label for="inputBio" class="col-sm-2 control-label">Bio</label>
           <div class="col-sm-10">
-            <textarea rows="4" class="form-control" id="inputBio" name="bio" required placeholder="Short bio"></textarea>
+            <textarea rows="4" class="form-control" id="inputBio" name="bio" placeholder="Short bio"></textarea>
             <div class="help-block bio_error"></div>
           </div>
         </div>
