small users/search improvements

--- a/views/users/search.html
+++ b/views/users/search.html
@@ -41,26 +41,30 @@
         </div>
 
       </form>
+
+      <div class="col-sm-offset-2 col-sm-10 no_results">
+        <h4>No Results</h4>
+      </div>
+
     </div>
-    <div class="user-list">
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>City</th>
-            <th>Country</th>
-            <th>Monger Groups</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="user">
-            <td><a class="link" href="/users/"><span class="name">Namei</span> <span class="nickname">(NickName)</span></a></td>
-            <td class="city">City</td>
-            <td class="country">Country</td>
-            <td class="monger_groups">Monger.pm</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+
+    <table class="table table-hover user-list">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>City</th>
+          <th>Country</th>
+          <th>Monger Groups</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="user">
+          <td><a class="link" href="/users/"><span class="name">Namei</span> <span class="nickname">(NickName)</span></a></td>
+          <td class="city">City</td>
+          <td class="country">Country</td>
+          <td class="monger_groups">Monger.pm</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
