--- a/views/users/search.html
+++ b/views/users/search.html
@@ -4,7 +4,7 @@
       <h3 class="panel-title">Search for users</h3>
     </div>
     <div class="panel-body">
-      <form class="form-horizontal" method="post" name="users_search">
+      <form class="form-horizontal" method="post" name="users_search" action="/users/search">
 
         <div class="form-group">
           <label class="col-sm-2 control-label">Name</label>
