show confirmed users strong in users/search

--- a/views/users/search.html
+++ b/views/users/search.html
@@ -59,8 +59,9 @@
       </thead>
       <tbody>
         <tr class="user">
-          <td><a class="link" href="/users/"><span class="name">Namei</span> <span class="nickname">(NickName)</span></a></td>
-          <td class="city">City</td>
+          <td class="confirmed"><strong><a class="link" href="/users/"><span class="name">Name</span> <span class="nickname">(NickName)</span></a></strong></td>
+          <td class="unconfirmed"><a class="link" href="/users/"><span class="name">Name</span> <span class="nickname">(NickName)</span></a></td>
+          <td class="city strong">City</td>
           <td class="country">Country</td>
           <td class="monger_groups">Monger.pm</td>
         </tr>
