--- a/views/admin/users.html
+++ b/views/admin/users.html
@@ -8,6 +8,8 @@
           <th>Nick name</th>
           <th>First name</th>
           <th>Last name</th>
+          <th>Attendee</th>
+          <th>Confirmed</th>
           <th>Edit</th>
           <th>Delete</th>
         </tr>
@@ -18,6 +20,8 @@
           <td class="nickname"></td>
           <td class="first-name">created</td> 
           <td class="last-name">created</td>
+          <td class="attendee">Yes/No</td>
+          <td class="confirmed">Yes/No</td>
           <td><a class="edit" href="/admin/users/edit/"><i class="fa fa-edit"></i></a></td>
           <td><a class="delete" href="/admin/users/delete/"><i class="fa fa-trash"></i></a></td>
         </tr>
