add blurb to homepage

--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,20 @@
     <img src="/img/perl-dancer-homepage-logo.png" class="center-block img-responsive">
   </div>
 
+  <div class="container">
+    <div class="jumbotron">
+      <p>The Perl Dancer Conference is a two day event on 21st and 22nd October
+      at the <a href="#location">Hotel Schani Wien</a>.</p>
+      <p>For those wanting a longer experience we are running two days of
+      training courses prior to the main conference on the 19th and 20th
+      October at <a href="#location">Amerikahaus</a> in Vienna.
+      Traing course places are limited so
+      please <a href="/tickets">book early</a> to guarantee your seat.</p>
+      <p>Running alongside the training days we will be running a hackathon
+      - further details will be made available soon.</p>
+    </div>
+  </div>
+
   <div class="container main-carousel-container">
     <div id="main-carousel" class="carousel slide" data-ride="carousel" data-interval="7500">
       <ol class="carousel-indicators">
@@ -91,7 +105,7 @@
   </div>
 
   <div class="container">
-    <h1 class="text-center">Location</h1>
+    <h1 class="text-center" id="location">Location</h1>
     <div class="row">
 
       <div class="col-md-6">
