--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
       <p>For those wanting a longer experience we are running two days of
       training courses prior to the main conference on the 19th and 20th
       October at <a href="#location">Amerikahaus</a> in Vienna.
-      Traing course places are limited so
+      Training course places are limited so
       please <a href="/tickets">book early</a> to guarantee your seat.</p>
       <p>Running alongside the training days we will be running a hackathon
       - further details will be made available soon.</p>
