remove some 'required' tags from admin/talk/create|edit

--- a/views/admin/talks/create_update.html
+++ b/views/admin/talks/create_update.html
@@ -34,7 +34,7 @@
     <div class="form-group">
         <label for="inputTags" class="col-sm-2 control-label">Tags</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputTags" name="tags" placeholder="Tags" required>
+            <input type="text" class="form-control" id="inputTags" name="tags" placeholder="Tags">
         </div>
     </div>
 
@@ -92,7 +92,7 @@
     <div class="form-group">
         <label for="inputStartTime" class="col-sm-2 control-label" style="margin-right: 15px;">Start Time</label>
         <div class="input-group date form_datetime col-md-4" data-date-format="dd MM yyyy - HH:ii p" data-link-field="start_time">
-            <input class="form-control" name="start_time" size="16" type="text" value="" required>
+            <input class="form-control" name="start_time" size="16" type="text" value="">
             <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
             <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
         </div>
@@ -101,7 +101,7 @@
     <div class="form-group">
         <label for="inputRoom" class="col-sm-2 control-label">Room</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputRoom" name="room" placeholder="Room" required>
+            <input type="text" class="form-control" id="inputRoom" name="room" placeholder="Room">
         </div>
     </div>
 
