--- a/views/news.xml
+++ b/views/news.xml
@@ -7,7 +7,7 @@
     <param name="title"/>
     <param name="author" field="author.name"/>
     <param name="created" filter="date_only"/>
-    <param name="content" filter="markdown_unsafe" op="hook"/>
+    <param name="content" filter="markdown" op="hook"/>
   </list>
   <container name="all-news" value="vars.uri"/>
 </specification>
