add short_abstract to talks on speaker page

--- a/views/speaker.html
+++ b/views/speaker.html
@@ -35,11 +35,17 @@
         </div>
         <div class="panel-body">
           <div class="session-info">
-            <div>
-              <i class="fa fa-clock-o" ></i> <span class="start_time"></span> <span class="duration_display">09:00 - 13:00</span>
-            </div>
-            <div>
-              <i class="fa fa-location-arrow"></i> <span class="location">Location</span>
+            <div class="row">
+              <div class="col-sm-4">
+                <div>
+                  <i class="fa fa-clock-o" ></i> <span class="start_time"></span> <span class="duration_display">09:00 - 13:00</span>
+                </div>
+                <div>
+                  <i class="fa fa-location-arrow"></i> <span class="location">Location</span>
+                </div>
+              </div>
+              <div class="col-sm-8 short_abstract">
+              </div>
             </div>
           </div>
         </div>
