fix talk location in talks list on speaker page

--- a/views/speaker.xml
+++ b/views/speaker.xml
@@ -31,6 +31,7 @@
     <param name="title" class="talk-link"/>
     <param name="start_time" filter="date_only"/>
     <param name="duration_display"/>
+    <param name="location" field="room"/>
     <param name="short_abstract"/>
   </list>
 </specification>
