open pause id link on speaker page with target _blank

--- a/views/speaker.html
+++ b/views/speaker.html
@@ -22,7 +22,7 @@
           <tr class="has_city"><th scope="row">City</th><td class="city"</td></tr>
           <tr class="has_country"><th scope="row">Country</th><td class="country"</td></tr>
           <tr class="has_bio"><th scope="row">Biography</th><td class="bio"</td></tr>
-          <tr class="has_pause_id"><th scope="row">PAUSE id</th><td><a class="pause_id" href="https://metacpan.org/author/"></a></td></tr>
+          <tr class="has_pause_id"><th scope="row">PAUSE id</th><td><a class="pause_id" href="https://metacpan.org/author/" target="_blank"></a></td></tr>
           <tr class="has_monger_groups"><th scope="row">Monger groups</th><td><span class="monger_group"><a class="monger" href="http://www.pm.org/"></a><span class="sep">, </span></span></td></tr>
         </tbody>
       </table>
