--- a/views/speaker.html
+++ b/views/speaker.html
@@ -23,7 +23,7 @@
           <tr class="has_country"><th scope="row">Country</th><td class="country"</td></tr>
           <tr class="has_bio"><th scope="row">Biography</th><td class="bio"</td></tr>
           <tr class="has_pause_id"><th scope="row">PAUSE id</th><td><a class="pause_id" href="https://metacpan.org/author/" target="_blank"></a></td></tr>
-          <tr class="has_monger_groups"><th scope="row">Monger groups</th><td><span class="monger_group"><a class="monger" href="http://www.pm.org/"></a><span class="sep">, </span></span></td></tr>
+          <tr class="has_monger_groups"><th scope="row">Monger groups</th><td class="monger_groups">Group.pm</td></tr>
         </tbody>
       </table>
       </div>
