complete favourite talks work

--- a/views/speaker.html
+++ b/views/speaker.html
@@ -31,7 +31,7 @@
       <h4 class="has_talks">Talks by <span class="name">Andrew Solomon</span></h4>
       <div class="panel panel-primary talks">
         <div class="panel-heading">
-          <h4 class="panel-title"><a class="talk-link" href="/talks/">Web Development using Dancer</a></h4>
+          <h4 class="panel-title"><span class="show-stars"><span class="remove_talk"><a href="/talks/remove/" class="picked"><img src="/img/picked.gif" title="remove from personal schedule"></a></span><span class="add_talk"><a href="/talks/add/" class="unpicked"><img src="/img/unpicked.gif" title="add to personal schedule"></a></span> </span><a class="talk-link" href="/talks/">Web Development using Dancer</a></h4>
         </div>
         <div class="panel-body">
           <div class="session-info">
