--- a/views/talk.html
+++ b/views/talk.html
@@ -20,9 +20,21 @@
       </div>
     </div>
     <div class="col-sm-9">
-      <h4 class="page-title">Web Development using Dancer</h4>
-      <div class="abstract">
-        Abstract appears here.
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Web Development using Dancer</h3>
+        </div>
+        <div class="panel-body abstract">
+          Abstract appears here.
+        </div>
+        <div class="panel-footer">
+          <div>
+            <strong>Attended by:</strong> <span class="attendee"><a class="link" href="/users/"><span class="name">Name</span><span class="nickname"> (NickName)</span></a></span><span class="sep">, </span>
+          </div>
+          <div class="show-stars">
+            <span class="remove_talk"><a href="/talks/remove/" class="picked"><img src="/img/picked.gif" title="remove from personal schedule"></a> <span class="text">remove from personal schedule</span></span><span class="add_talk"><a href="/talks/add/" class="unpicked"><img src="/img/unpicked.gif" title="add to personal schedule"></a> <span class="text">add to personal schedule</span></span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
