--- a/views/speaker.xml
+++ b/views/speaker.xml
@@ -7,6 +7,7 @@
   <container name="has_pause_id" value="user.pause_id"/>
   <container name="has_talks" value="has_talks"/>
   <container name="has_monger_groups" value="user.monger_groups"/>
+  <container name="show-stars" value="logged_in_user"/>
 
   <value name="name" field="user.name"/>
   <value name="nickname" field="user.nickname"/>
@@ -23,6 +24,10 @@
     op="hook"/>
 
   <list name="talks" iterator="talks">
+    <container name="remove_talk" value="attendee_talks.first.users_id"/>
+    <container name="add_talk" value="!attendee_talks.first.users_id"/>
+    <param name="picked" field="id" target="href" op="append"/>
+    <param name="unpicked" field="id" target="href" op="append"/>
     <param name="talk-link" target="href" op="append" field="seo_uri"/>
     <param name="title" class="talk-link"/>
     <param name="start_time" filter="date_only"/>
