--- a/views/talk.xml
+++ b/views/talk.xml
@@ -1,4 +1,11 @@
 <specification>
+  <pattern name="nickpat" type="string">NickName</pattern>
+  <container name="show-stars" value="logged_in_user"/>
+  <container name="session-location" value="talk.room"/>
+  <container name="remove_talk" value="picked"/>
+  <container name="add_talk" value="!picked"/>
+  <value name="picked" field="talk.id" target="href" op="append"/>
+  <value name="unpicked" field="talk.id" target="href" op="append"/>
   <value name="title" class="page-title" field="talk.title"/>
   <value name="abstract" field="talk.abstract" op="hook" filter="markdown"/>
   <value name="photo-link" target="href" op="append" field="talk.author.uri"/>
@@ -7,7 +14,11 @@
   <value name="photo" target="src" field="talk.author.photo_uri"/>
   <value name="date" field="talk.start_time" filter="date_only"/>
   <value name="duration_display" field="talk.duration_display"/>
-  <container name="session-location" value="talk.room">
-    <value name="location" field="talk.room"/>
-  </container>
+  <value name="location" field="talk.room"/>
+  <list name="attendee" iterator="talk.attendee_talks">
+    <param name="name" field="user.name"/>
+    <param name="nickname" field="user.nickname" op="toggle" pattern="nickpat"/>
+    <param name="link" target="href" op="append" field="user.uri"/>
+    <separator name="sep"/>
+  </list>
 </specification>
