hide 'Attended by' for talks with no registered attendees

--- a/views/talk.html
+++ b/views/talk.html
@@ -28,7 +28,7 @@
           Abstract appears here.
         </div>
         <div class="panel-footer">
-          <div>
+          <div class="has_attendees">
             <strong>Attended by:</strong> <span class="attendee"><a class="link" href="/users/"><span class="name">Name</span><span class="nickname"> (NickName)</span></a></span><span class="sep">, </span>
           </div>
           <div class="show-stars">
