--- a/views/talks.xml
+++ b/views/talks.xml
@@ -6,8 +6,8 @@
   <value name="talks_accepted"/>
   <value name="cloud" op="hook"/>
   <list name="talks" iterator="talks">
-    <container name="remove_talk" value="attendee_talks.first.users_id"/>
-    <container name="add_talk" value="!attendee_talks.first.users_id"/>
+    <container name="remove_talk" value="attendee_status"/>
+    <container name="add_talk" value="!attendee_status"/>
     <param name="picked" field="id" target="href" op="append"/>
     <param name="unpicked" field="id" target="href" op="append"/>
     <param name="name" field="author.name"/>
