--- a/views/talk.html
+++ b/views/talk.html
@@ -22,7 +22,7 @@
     <div class="col-sm-9">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">Web Development using Dancer</h3>
+          <h3 class="panel-title">Talk Title Here</h3>
         </div>
         <div class="panel-body abstract">
           Abstract appears here.
