limit news items on homepage

--- a/views/news.html
+++ b/views/news.html
@@ -16,5 +16,5 @@
       <div class="panel-body content">
       </div>
     </div>
-    <div class="all-news"><a href="/news">All News</a></div>
+    <h4 class="text-center all-news"><a href="/news">News Archive</a></h4>
 </div>
