show roles in /admin/users

--- a/views/admin/users.html
+++ b/views/admin/users.html
@@ -8,6 +8,7 @@
           <th>Nick name</th>
           <th>First name</th>
           <th>Last name</th>
+          <th>Roles</th>
           <th>Attendee</th>
           <th>Confirmed</th>
           <th>Edit</th>
@@ -20,6 +21,7 @@
           <td class="nickname"></td>
           <td class="first-name">created</td> 
           <td class="last-name">created</td>
+          <td class="roles"><span class="role"><span class="name">Role</span><span class="sep">, </span></span></td>
           <td class="attendee">Yes/No</td>
           <td class="confirmed">Yes/No</td>
           <td><a class="edit" href="/admin/users/edit/"><i class="fa fa-edit"></i></a></td>
