add scheduled column to Talk and end_date column to Conference
Also bump schema version and add upgrade sql.

--- a/views/schedule.html
+++ b/views/schedule.html
@@ -1,4 +1,36 @@
 <div class="container">
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h2 class="panel-title">Talks Schedule Overview</h2>
+    </div>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Dates</th><th>Location</th><th>Event</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Mon 19th - Tue 20th October 2015</td>
+          <td>Amerikahaus</td>
+          <td>Two days of training Perl::Dancer training</td>
+        </tr>
+        <tr>
+          <td>Wed 21st - Thu 22nd October 2015</td>
+          <td>Hotel Schani Wien</td>
+          <td>Perl Dancer Conference 2015</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div>
+    <ul class="nav nav-tabs nav_days" role="tablist">
+      <li role="presentation" class="nav_day"><a href="#" aria-controls="" role="tab" data-toggle="tab">Day</a></li>
+    </ul>
+  </div>
+
   <div class="panel panel-primary talks">
     <div class="panel-heading">
       <h3 class="panel-title">day</h3>
