more colours for events cells in schedule

--- a/views/schedule.html
+++ b/views/schedule.html
@@ -40,7 +40,7 @@
           Schedule for this day has not yet been finalised.
         </div>
         <div class="table-responsive has_rows">
-          <table class="table table-bordered">
+          <table class="table table-bordered schedule">
             <thead>
               <tr>
                 <th>Time</th>
