--- a/views/schedule.html
+++ b/views/schedule.html
@@ -52,9 +52,11 @@
                 <td class="time"></td>
                 <td class="slot">
                   <span class="is_talk">
+                    <span class="show-stars"><span class="remove_talk"><a href="/talks/remove/" class="picked"><img src="/img/picked.gif" title="remove from personal schedule"></a></span><span class="add_talk"><a href="/talks/add/" class="unpicked"><img src="/img/unpicked.gif" title="add to personal schedule"></a></span> </span>
                     <a class="author_uri" href="/speakers/"><span class="author_name">Author</span><span class="author_nickname"> (NickName)</span></a> - 
                     <a class="title" href="/talks/">Talk Name</a>
-                    <span class="duration"> (10 min)</span>
+                    <span class="duration"> (10 min)</span><span> </span>
+                    <span class="stars">X</span><img src="/img/picked.gif">
                   </span>
                   <span class="is_event">
                     <a class="title" href="/events/">Event Name</a>
