On order, send mail to shop owner and hide the profile link

--- a/views/profile/order.html
+++ b/views/profile/order.html
@@ -60,6 +60,8 @@
             </tbody>
         </table>
     </div>
-    <a href="/profile">Back to your profile</a>
+    <div class="profile-link">
+      <a href="/profile">Back to your profile</a>
+    </div>
 </div>
 </div>
