Show inventory on tickets

--- a/views/fragments/tickets.html
+++ b/views/fragments/tickets.html
@@ -4,6 +4,9 @@
       <div class="ticket-header">
         <div class="short_description">Ticket name</div>
         <div class="price">0.00</div>
+        <div class="ticket-left-container">
+          Only <span class="tickets_left">9999</span> tickets left
+        </div>
       </div>
       <div class="description ticket-content">Ticket description</div>
       <form action="/cart" method="post">
