--- a/views/admin/talks/create_update.html
+++ b/views/admin/talks/create_update.html
@@ -90,12 +90,14 @@
     </div>
 
     <div class="form-group">
-        <label for="inputStartTime" class="col-sm-2 control-label" style="margin-right: 15px;">Start Time</label>
-        <div class="input-group date form_datetime col-md-4" data-date-format="dd MM yyyy - HH:ii p" data-link-field="start_time">
+      <label for="inputStartTime" class="col-sm-2 control-label">Start Time</label>
+      <div class="col-sm-4">
+        <div class="input-group date form_datetime" data-date-format="dd MM yyyy - HH:ii p" data-link-field="start_time">
             <input class="form-control" name="start_time" size="16" type="text" value="">
             <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
             <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
         </div>
+      </div>
     </div>
 
     <div class="form-group">
