add extra columns to admin/talks

--- a/views/admin/talks.html
+++ b/views/admin/talks.html
@@ -5,9 +5,13 @@
       <thead>
         <tr>
           <th>Title</th>
+          <th>Author</th>
+          <th>Duration</th>
           <th>Accepted</th>
           <th>Confirmed</th>
-          <th>Author</th>
+          <th>Scheduled</th>
+          <th>Start Time</th>
+          <th>Room</th>
           <th>Edit</th>
           <th>Delete</th>
         </tr>
@@ -15,9 +19,13 @@
       <tbody>
         <tr class="talks-item">
           <td class="title">title</td>
-          <td class="accepted">accepted</td>
-          <td class="confirmed">confirmed</td>
           <td class="author">author</td>
+          <td><span class="duration">XX</span> min</td>
+          <td class="accepted">yes/no</td>
+          <td class="confirmed">yes/no</td>
+          <td class="scheduled">yes/no</td>
+          <td class="start_time">date/time</td>
+          <td class="room">Room</td>
           <td><a class="edit" href="/admin/talks/edit/"><i class="fa fa-edit"></i></a></td>
           <td><a class="delete" href="/admin/talks/delete/"><i class="fa fa-trash"></i></a></td>
         </tr>
