--- a/views/admin/events.html
+++ b/views/admin/events.html
@@ -16,7 +16,7 @@
       <tbody>
         <tr class="events-item">
           <td class="title">Title</td>
-          <td><span class="duration">XX</span> mins</td>
+          <td><span class="duration">XX</span> min</td>
           <td class="scheduled">Yes/No</td>
           <td class="start_time">date/time</td>
           <td class="room">Room</td>
