--- a/views/schedule.html
+++ b/views/schedule.html
@@ -73,21 +73,51 @@
     </div>
   </div>
 
-  <div class="panel panel-default show-unscheduled">
+  <div class="panel panel-default show-unscheduled-events">
     <div class="panel-heading">
-      <h2 class="panel-title">Unscheduled Talks</h2>
+      <h2 class="panel-title">Events with no start time and/or room</h2>
     </div>
     <table class="table">
       <thead>
         <tr>
-          <th>Speaker</th><th>Title</th><th>Duration</th>
+          <th>Title</th>
+          <th>Duration</th>
+          <th>Start Time</th>
+          <th>Room</th>
         </tr>
       </thead>
       <tbody>
-        <tr class="unscheduled">
+        <tr class="unscheduled_event">
+          <td><a class="title" href="/talks/">Title</a></td>
+          <td><span class="duration">XX</span> min</td>
+          <td class="start_time"></td>
+          <td class="room"></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="panel panel-default show-unscheduled-talks">
+    <div class="panel-heading">
+      <h2 class="panel-title">Talks with no start time and/or room</h2>
+    </div>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Speaker</th>
+          <th>Title</th>
+          <th>Duration</th>
+          <th>Start Time</th>
+          <th>Room</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="unscheduled_talk">
           <td><a class="uri" href="/speakers/"><span class="name">Name</span><span class="nickname"> (NickName)</span></a></td>
           <td><a class="title" href="/talks/">Title</a></td>
           <td><span class="duration">XX</span> min</td>
+          <td class="start_time"></td>
+          <td class="room"></td>
         </tr>
       </tbody>
     </table>
