fix typo in /profile/password + improve old password check sub return
the check sub now returns 1 on success instead of return the value

Thanks to @sbatschelet

--- a/views/profile/password.html
+++ b/views/profile/password.html
@@ -9,7 +9,7 @@
           <form class="form-horizontal" method="post">
 
             <div class="form-group old_password_input">
-              <label for="oldPasswordInput" class="col-sm-4 control-label">Old Passord</label>
+              <label for="oldPasswordInput" class="col-sm-4 control-label">Old Password</label>
               <div class="col-sm-8">
                 <input type="password" class="form-control" id="oldPasswordInput" required placeholder="Old Password" name="old_password">
                 <div class="help-block old_password_error"></div>
