update sponsor packages.

--- a/views/sponsoring.html
+++ b/views/sponsoring.html
@@ -1,12 +1,22 @@
 <div class="container">
-  <div class="well">
-  
-  <h2>Why sponsor?</h2>
+<div class="well">
+    <h2>Why sponsor?</h2>
+    <p>Sponsor the Perl::Dancer conference to get a real community audience for Perl and Dancer related topics and present your company or association.</p>
+    <p>Apart from the sponsorship benefits, you will get in touch with community directly and meet the developers in person. Below we have outlined a few sponsorship options but we are open to additional custom proposals. This is a wonderful opportunity for your business to cost effectively target a very specific and technical market group. Contact us today and let one of our team members work out an effective plan perfect for any budget.</p>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">Sponsorship Packages</h3>
+        </div>
+        <div class="panel-body">
+            <h4><span class="label label-default">Bronze Level Sponsor</span></h4><p>Web logo with link on event homepage and
+            other web based marketing and email blasts. - 200.00 (EUR)</p>
+            <h4><span class="label label-primary">Silver Level Sponsor</span></h4><p>Bronze level sponsorship and company banner
+            in conference room. - 350.00 (EUR)</p>
+            <h4><span class="label label-warning">Gold Level Sponsor</span></h4><p>Silver level sponsorship and and company logo predominantly                                                                placed on event t-shirt. - 750.00 (EUR)</p>
+            <h4><span class="label label-info">Diamond Sponsor</span></h4><p>Gold level sponsorship, plus social event sponsor. - 3500.00 (EUR)</p>
 
-  <p>Sponsor the Perl::Dancer conference to get a real community audience for Perl and Dancer related topics and present your company or association.</p>
-
-  <p>Apart from the sponsorship benefits, you will get in touch with community directly and meet the developers in person. Below we have outlined a few sponsorship options but we are open to additional custom proposals. This is a wonderful opportunity for your business to cost effectively target a very specific and technical market group. Contact us today and let one of our team members work out an effective plan perfect for any budget.</p>
-
-  <p>Sponsor request by email: <a href="mailto:2015@perl.dance">2015@perl.dance</a></p>
-  </div>
+        </div>
+    </div>
+    <p>Sponsor request by email: <a href="mailto:2015@perl.dance">2015@perl.dance</a></p
+</div>
 </div>
