simplify admin/nav templates and js

--- a/views/admin/navigation.html
+++ b/views/admin/navigation.html
@@ -26,9 +26,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr class="nav-item">
-          <td class="navigation_id"></td>
-          <td class="parent_id"></td>
+        <tr class="nav-item parent">
           <td><span class="name folder"></span></td>
           <td class="type"></td>
           <td class="scope"></td>
