--- a/views/sponsoring.html
+++ b/views/sponsoring.html
@@ -9,11 +9,11 @@
         </div>
         <div class="panel-body">
             <h4><span class="label label-default">Bronze Level Sponsor</span></h4><p>Web logo with link on event homepage and
-            other web based marketing and email blasts. - 200.00 (EUR)</p>
+            other web based marketing and email blasts. - 200 €</p>
             <h4><span class="label label-primary">Silver Level Sponsor</span></h4><p>Bronze level sponsorship and company banner
-            in conference room. - 400.00 (EUR)</p>
-            <h4><span class="label label-warning">Gold Level Sponsor</span></h4><p>Silver level sponsorship and and company logo predominantly                                                                placed on event t-shirt. - 800.00 (EUR)</p>
-            <h4><span class="label label-info">Diamond Sponsor</span></h4><p>Gold level sponsorship, plus social event sponsor. - 3000.00 (EUR)</p>
+            in conference room. - 400.00 €</p>
+            <h4><span class="label label-warning">Gold Level Sponsor</span></h4><p>Silver level sponsorship and and company logo predominantly                                                                placed on event t-shirt. - 800.00 €</p>
+            <h4><span class="label label-info">Diamond Sponsor</span></h4><p>Gold level sponsorship, plus social event sponsor. - 3000 €</p>
 
         </div>
     </div>
